lexer/snapshots/lexer__lexer_test__tests__comparison_operators.snap
---
source: lexer/lexer_test.rs
expression: 5 <= 10 >= 3
---
[
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 0,
      "end": 1
    }
  },
  {
    "kind": {
      "type": "LTE"
    },
    "span": {
      "start": 2,
      "end": 4
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 10
    },
    "span": {
      "start": 5,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "GTE"
    },
    "span": {
      "start": 8,
      "end": 10
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 3
    },
    "span": {
      "start": 11,
      "end": 12
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 12,
      "end": 12
    }
  }
]
