lexer/snapshots/lexer__lexer_test__tests__modulo.snap
---
source: lexer/lexer_test.rs
expression: 10 % 3
---
[
  {
    "kind": {
      "type": "INT",
      "value": 10
    },
    "span": {
      "start": 0,
      "end": 2
    }
  },
  {
    "kind": {
      "type": "PERCENT"
    },
    "span": {
      "start": 3,
      "end": 4
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 3
    },
    "span": {
      "start": 5,
      "end": 6
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 6,
      "end": 6
    }
  }
]
