lexer/snapshots/lexer__lexer_test__tests__string_escapes.snap
---
source: lexer/lexer_test.rs
expression: "\"\\thello\\nworld\""
---
[
  {
    "kind": {
      "type": "STRING",
      "value": "\thello\nworld"
    },
    "span": {
      "start": 0,
      "end": 16
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 16,
      "end": 16
    }
  }
]
