lexer/snapshots/lexer__lexer_test__tests__while.snap
---
source: lexer/lexer_test.rs
expression: "while (x < 5) { x }"
---
[
  {
    "kind": {
      "type": "WHILE"
    },
    "span": {
      "start": 0,
      "end": 5
    }
  },
  {
    "kind": {
      "type": "LPAREN"
    },
    "span": {
      "start": 6,
      "end": 7
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 7,
      "end": 8
    }
  },
  {
    "kind": {
      "type": "LT"
    },
    "span": {
      "start": 9,
      "end": 10
    }
  },
  {
    "kind": {
      "type": "INT",
      "value": 5
    },
    "span": {
      "start": 11,
      "end": 12
    }
  },
  {
    "kind": {
      "type": "RPAREN"
    },
    "span": {
      "start": 12,
      "end": 13
    }
  },
  {
    "kind": {
      "type": "LBRACE"
    },
    "span": {
      "start": 14,
      "end": 15
    }
  },
  {
    "kind": {
      "type": "IDENTIFIER",
      "value": {
        "name": "x"
      }
    },
    "span": {
      "start": 16,
      "end": 17
    }
  },
  {
    "kind": {
      "type": "RBRACE"
    },
    "span": {
      "start": 18,
      "end": 19
    }
  },
  {
    "kind": {
      "type": "EOF"
    },
    "span": {
      "start": 19,
      "end": 19
    }
  }
]
